@@ -1,3 +1,7 @@
+2006-12-10  J.H.M. Dassen (Ray) <jdassen@debian.org>
+
+	* gtk-doc-manual.xml: Spelling fixes.
+
 2006-10-13  Damon Chaplin  <damon@gnome.org>
 
 	* gtk-doc-manual.xml: use "GNOME" instead of "Gnome". (#352160)
